--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^26.0.20",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
+    "postcss": "^8.2.6",
     "prettier": "^2.2.1",
     "typescript": "^4.2.1-rc"
   }
